# KinectOnTheCeiling

./: LICENSE  README.md
Kinect2Capture/: Kinect2Capture.sln
Kinect2Capture/Kinect2Capture/: Kinect2Capture.vcxproj  Kinect2Capture.vcxproj.filters  Source.cpp
Kinect2Capture/Kinect2Capture/Debug/: CL.read.1.tlog  CL.write.1.tlog  Kinect2Capture.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Kinect2Capture/Kinect2Capture/Release/: CL.read.1.tlog  CL.write.1.tlog  Kinect2Capture.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Kinect2Capture/Kinect2Capture/myUtils/: macrodef.h
Kinect2Capture/Kinect2Capture/myUtils/CmdLineOptions/: CmdLineOptions.cpp  CmdLineOptions.h
Kinect2Capture/Kinect2Capture/myUtils/FrameMat/: ColorMat.cpp  DepthMat.cpp  FrameMat.cpp  FrameMat.h  InfraredMat.cpp
Kinect2Capture/Kinect2Capture/myUtils/KinectCapture/: KinectCapture.cpp  KinectCapture.h
Kinect2Capture/Kinect2Capture/myUtils/TimeStamp/: TimeStamp.cpp  TimeStamp.h
Kinect2Capture/Kinect2Capture/x64/Debug/: CL.read.1.tlog  CL.write.1.tlog  Kinect2Capture.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  (+1 more)
PoseEstimation/: .gitignore  README.md
PoseEstimation/Script/Main/: JPP_precision.py  body_part_classification.py  camera_location_clustering.py  divide_and_conquer_BPC.py  drawer_prediction.py  joint_position_prediction.py
PoseEstimation/Script/Preprocessing/ImageLabeling/: CMakeLists.txt  labeling.cpp  labeling.h  main.cpp  main.h  opening.cpp  opening.h
(+40 files in other folders)
